--- a/GagTag/Main.storyboard
+++ b/GagTag/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yqd-sd-4QX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5mw-pz-YjH">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
@@ -520,50 +520,119 @@
             </objects>
             <point key="canvasLocation" x="6093" y="-402"/>
         </scene>
-        <!--Content View Controller-->
-        <scene sceneID="Dc9-A6-idz">
+        <!--Page View Controller-->
+        <scene sceneID="lbV-ec-RTi">
             <objects>
-                <viewController storyboardIdentifier="contentViewController" id="ySJ-L9-fAt" customClass="ContentViewController" customModule="GagTag" customModuleProvider="target" sceneMemberID="viewController">
+                <pageViewController storyboardIdentifier="tutorialPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="dMD-vL-PcU" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j6x-PV-99B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1864" y="-1140"/>
+        </scene>
+        <!--Tut Page Controller1-->
+        <scene sceneID="Vd9-sH-Xw3">
+            <objects>
+                <viewController storyboardIdentifier="tutPage1" id="QUb-3L-Qli" customClass="TutPageController1" customModule="GagTag" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="j1N-vY-UDt"/>
-                        <viewControllerLayoutGuide type="bottom" id="Cpg-vt-0nK"/>
+                        <viewControllerLayoutGuide type="top" id="GoZ-Hh-ZuH"/>
+                        <viewControllerLayoutGuide type="bottom" id="b5Y-cg-Yi8"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="DMZ-fR-54B">
+                    <view key="view" contentMode="scaleToFill" id="3Zc-Sb-M6I">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X6q-gk-Ov2">
-                                <rect key="frame" x="16" y="28" width="568" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tutPage1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gru-xW-evz">
+                                <rect key="frame" x="266" y="28" width="68" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UmB-aX-bjA">
+                                <rect key="frame" x="277" y="245" width="46" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="next:" destination="QUb-3L-Qli" eventType="touchUpInside" id="zT5-W9-Rs4"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="b5Y-cg-Yi8" firstAttribute="top" secondItem="UmB-aX-bjA" secondAttribute="bottom" constant="325" id="BpP-w1-aas"/>
+                            <constraint firstItem="Gru-xW-evz" firstAttribute="top" secondItem="GoZ-Hh-ZuH" secondAttribute="bottom" constant="8" symbolic="YES" id="DIJ-6w-IKK"/>
+                            <constraint firstItem="Gru-xW-evz" firstAttribute="centerX" secondItem="UmB-aX-bjA" secondAttribute="centerX" id="K4K-eX-obI"/>
+                            <constraint firstItem="UmB-aX-bjA" firstAttribute="centerX" secondItem="3Zc-Sb-M6I" secondAttribute="centerX" id="QN7-SE-17V"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QrA-VV-wfm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1864" y="-1795"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="j6S-li-KMN">
+            <objects>
+                <viewController storyboardIdentifier="tutPage2" id="xdQ-b3-mh6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="z0L-ze-5HL"/>
+                        <viewControllerLayoutGuide type="bottom" id="x7r-hV-3wi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EtV-b2-bY3">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tutPage2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pUb-M8-qno">
+                                <rect key="frame" x="265" y="28" width="70" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="X6q-gk-Ov2" firstAttribute="leading" secondItem="DMZ-fR-54B" secondAttribute="leadingMargin" id="3xI-Xm-hxZ"/>
-                            <constraint firstItem="Cpg-vt-0nK" firstAttribute="top" secondItem="X6q-gk-Ov2" secondAttribute="bottom" constant="551" id="gDs-Ao-bpD"/>
-                            <constraint firstItem="X6q-gk-Ov2" firstAttribute="top" secondItem="j1N-vY-UDt" secondAttribute="bottom" constant="8" symbolic="YES" id="pqZ-OE-OGR"/>
-                            <constraint firstItem="X6q-gk-Ov2" firstAttribute="trailing" secondItem="DMZ-fR-54B" secondAttribute="trailingMargin" id="tLy-ld-Xuk"/>
+                            <constraint firstItem="pUb-M8-qno" firstAttribute="centerX" secondItem="EtV-b2-bY3" secondAttribute="centerX" id="nht-zX-g3A"/>
+                            <constraint firstItem="pUb-M8-qno" firstAttribute="top" secondItem="z0L-ze-5HL" secondAttribute="bottom" constant="8" symbolic="YES" id="vJo-IA-xOv"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="labelTitle" destination="X6q-gk-Ov2" id="Smo-n9-hpL"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uQx-43-f5N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dN2-kV-zhq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1864" y="-1808"/>
+            <point key="canvasLocation" x="1864" y="-2460"/>
         </scene>
-        <!--Page View Controller-->
-        <scene sceneID="lbV-ec-RTi">
+        <!--View Controller-->
+        <scene sceneID="NCN-KS-DCw">
             <objects>
-                <pageViewController storyboardIdentifier="pageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="dMD-vL-PcU" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="j6x-PV-99B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="tutPage3" id="KFv-Q8-scU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="h3I-MB-oBl"/>
+                        <viewControllerLayoutGuide type="bottom" id="iCC-cR-p9i"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="88A-fR-vxn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tutPage3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6gv-0E-OXh">
+                                <rect key="frame" x="265" y="28" width="70" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6gv-0E-OXh" firstAttribute="centerX" secondItem="88A-fR-vxn" secondAttribute="centerX" id="lNm-JA-KbQ"/>
+                            <constraint firstItem="6gv-0E-OXh" firstAttribute="top" secondItem="h3I-MB-oBl" secondAttribute="bottom" constant="8" symbolic="YES" id="sDq-M4-kys"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5b6-Ae-yO4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1864" y="-1140"/>
+            <point key="canvasLocation" x="1864" y="-3128"/>
         </scene>
         <!--Tutorial View Controller-->
         <scene sceneID="DAd-Rd-Z3v">
